# chatroom-rs

./: Cargo.toml  README.md
chatroom-client/: package.json
chatroom-client/src/: App.tsx  about.ts
chatroom-client/src-tauri/: Cargo.toml  tauri.conf.json
chatroom-client/src-tauri/icons/: icon.icns
chatroom-client/src-tauri/src/: client.rs  main.rs
chatroom-client/src/components/: ChangePassModal.tsx  SnackBarCloseButton.tsx
chatroom-client/src/pages/: ChatPage.tsx  ConnectionPage.tsx  LoginPage.tsx  RegisterPage.tsx
chatroom-client/src/states/: PathState.ts
chatroom-core/: Cargo.toml
chatroom-core/examples/: client.rs  server.rs  test_client.rs
chatroom-core/src/: connection.rs  data.rs  lib.rs  utils.rs
chatroom-server/: package.json
chatroom-server/src/: App.tsx
chatroom-server/src-tauri/: Cargo.toml  tauri.conf.json
chatroom-server/src-tauri/src/: main.rs  server.rs  server_core.rs  utils.rs
