[package]
name = "chatroom-core"
authors = ["HareInWeed"]
description = "core functionality of chatroom"
repository = "https://github.com/HareInWeed/chatroom-rs"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1.14.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable"] }
bincode = "1"

rand = "0.8"
sha2 = "0.10"
rust-argon2 = "0.8"
futures = "0.3"

clap = { version = "3", features = ["derive"] }
parking_lot = "0.11"


[[bin]]
name = "client"

[[bin]]
name = "server"
