[package]
name = "chatroom-core"
authors = ["HareInWeed"]
description = "core functionality of chatroom"
repository = "https://github.com/HareInWeed/chatroom-rs"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1.14.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
futures = "0.3"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3" }
bincode = "1"
byteorder = "1"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
rust-argon2 = "0.8"

[[example]]
name = "client"

[[example]]
name = "test_client"

[[example]]
name = "server"
